<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:scrollbars="vertical">

	<TableLayout android:id="@+id/layout_main"
		android:layout_width="fill_parent" android:layout_height="fill_parent"
		android:stretchColumns="*" android:background="#A4A4A4">

		<TableRow android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:background="#000000"
			android:layout_marginBottom="1dip">
			<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:text="@string/not_ok" />
			<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:text="@string/result_16k" />
			<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:text="@string/unit_16k" />
		</TableRow>

		<TableRow android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:background="#000000"
			android:layout_marginBottom="1dip">
			<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:text="@string/not_ok" />
			<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:text="@string/result_32k" />
			<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:text="@string/unit_32k" />
		</TableRow>

		<TableRow android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:background="#000000"
			android:layout_marginBottom="1dip">
			<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:text="@string/not_ok" />
			<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:text="@string/result_64k" />
			<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:text="@string/unit_64k" />
		</TableRow>

		<TableRow android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:background="#000000"
			android:layout_marginBottom="1dip">
			<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:text="@string/not_ok" />
			<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:text="@string/result_128k" />
			<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:text="@string/unit_128k" />
		</TableRow>

		<TableRow android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:background="#000000"
			android:layout_marginBottom="1dip">
			<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:text="@string/not_ok" />
			<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:text="@string/result_256k" />
			<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:text="@string/unit_256k" />
		</TableRow>

		<TableRow android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:background="#000000"
			android:layout_marginBottom="1dip">
			<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:text="@string/not_ok" />
			<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:text="@string/result_512k" />
			<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:text="@string/unit_512k" />
		</TableRow>

		<TableRow android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:background="#000000"
			android:layout_marginBottom="1dip">
			<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:text="@string/not_ok" />
			<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:text="@string/result_1m" />
			<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:text="@string/unit_1m" />
		</TableRow>

		<TableRow android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:background="#000000"
			android:layout_marginBottom="1dip">
			<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:text="@string/not_ok" />
			<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:text="@string/result_2m" />
			<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:text="@string/unit_2m" />
		</TableRow>

		<TableRow android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:background="#000000"
			android:layout_marginBottom="1dip">
			<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:text="@string/not_ok" />
			<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:text="@string/result_4m" />
			<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:text="@string/unit_4m" />
		</TableRow>

		<LinearLayout android:id="@+id/btnCalculate"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:background="#000000">
			<Button android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:text="Calculate"
				android:layout_marginTop="1dip" android:onClick="btnCalculateClicked" />
		</LinearLayout>

	</TableLayout>

</ScrollView>